[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_cli"
version = "0.9.1"
description = "Missing file utilities"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Lief Koepsel", email = "lkoepsel@wellys.com" }]
keywords = ["Python", "missing files"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Communications",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["click>=8.0", "xxhash"]
urls = { "Homepage" = "https://github.com/lkoepsel/py_cli" }

[project.scripts]
ch = "py_cli.ch:ch"
dedup = "py_cli.dedup:dedup"
mf = "py_cli.mf:mf"
mfs = "py_cli.mfs:mfs"
hw = "py_cli.hw:hw"
hp = "py_cli.hp:hp"
fhc = "py_cli.fhc:fhc"
hc = "py_cli.hc:hc"
py_cli = "py_cli.py_cli:py_cli"

[tool.setuptools]
packages = ["py_cli"]
