[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lk_cli"
version = "0.9.2.2"
description = "Python utilities"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Lief Koepsel", email = "lkoepsel@wellys.com" }]
requires-python = ">=3.12"
keywords = ["Python", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Communications",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "xxhash>=3.5.0",
]
urls = { "Homepage" = "https://github.com/lkoepsel/lk_cli" }

[project.scripts]
ch = "lk_cli.ch:ch"
dedup = "lk_cli.dedup:dedup"
mf = "lk_cli.mf:mf"
mfs = "lk_cli.mfs:mfs"
hw = "lk_cli.hw:hw"
hp = "lk_cli.hp:hp"
fhc = "lk_cli.fhc:fhc"
hc = "lk_cli.hc:hc"
uc = "lk_cli.uc:uc"
lk_cli = "lk_cli.lk_cli:lk_cli"

[tool.setuptools]
packages = ["lk_cli"]
